# local-llm-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.gpu-mtp.example.yml  docker-compose.gpu-multimodal.example.yml  docker-compose.gpu.example.yml  docker-compose.hermes-agent.yml  docker-compose.hermes-local-llm.yml  docker-compose.hermes-runtime.bind-test.yml  docker-compose.hermes-runtime.example.yml  docker-compose.multimodal.example.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md
docs/dev-log/: 2026-06-04-qwen35-mtp.md  2026-06-05-hermes-agent-compat.md  2026-06-06-4b-model-downloads.md  2026-06-06-gemma4-e4b-qat.md  2026-06-06-qwen36-2b-search.md  2026-06-07-agent-capability-harness.md
docs/experiments/: hadara-local-llm-hermes.md
hermes-agent-smoke/: config.yaml
model-profiles/: gemma3-4b-it-q4.env  gemma4-e2b-q4-nested.env  gemma4-e2b-q4.env  gemma4-e4b-it-qat-q2-xl.env  gemma4-e4b-it-qat-q4-xl.env  qwen3.5-2b-mtp-q4-xl-kv-q8.env  qwen3.5-2b-mtp-q4-xl.env  qwen3.5-2b-q4-xl.env  qwen3.5-2b-q8.env  qwen3.5-4b-mtp-q4.env  qwen3.5-4b-q4.env
scripts/: benchmark_chat.py  download_model.sh  env.sh  export_model_profile_env.sh  llama_image.sh  run_agent_capability_eval.sh  run_hermes_runtime_example.sh  run_model_profile.sh  smoke_chat.sh  smoke_hermes_agent.sh  smoke_hermes_browser_tool.sh  smoke_hermes_runtime.sh  summarize_benchmarks.py  validate_models.sh  verify_hermes_bind_data.sh  verify_host_storage_primitives.sh
tests/: conftest.py  test_app_proxy.py  test_benchmark_presets.py
(+25 files in other folders)
